# deepseek-siri

./: .gitignore  Cargo.toml  wrangler.toml
src/: chat.rs  history.rs  main.rs
src/functions/: mod.rs  weather.rs
